@@ -8,7 +8,8 @@
     "rpo.lavidacraft.blocks.chorus": "Chorus Flowers",
     "rpo.lavidacraft.blocks.dragonEgg": "Dragon Egg",
     "rpo.lavidacraft.blocks.dragonEggEmission": "Dragon Egg Emission",
-    "rpo.lavidacraft.blocks.kelp": "Dried Kelp Blocks",
+    "rpo.lavidacraft.blocks.driedKelp": "Dried Kelp Blocks",
+    "rpo.lavidacraft.blocks.farmland": "Farmland Sides",
     "rpo.lavidacraft.blocks.glowstone": "Glowstone",
     "rpo.lavidacraft.blocks.glowstone.tooltip": "Custom textures for glowstone and glowstone dust",
     "rpo.lavidacraft.blocks.grasslikeSides": "Grass-like Block Sides",
@@ -65,6 +66,7 @@
     "rpo.lavidacraft.items.netheriteTools.tooltip": "Custom textures for netherite axes, hoes, pickaxes, shovels, and swords",
     "rpo.lavidacraft.items.netheriteToolsEmission": "Netherite Tools Emission",
     "rpo.lavidacraft.items.netheriteToolsEmission.tooltip": "Emissive textures for netherite tools (Requires OptiFine or similar mod)",
+    "rpo.lavidacraft.items.netherQuartz": "Nether Quartz",
     "rpo.lavidacraft.items.netherWarts": "Nether Warts",
     "rpo.lavidacraft.items.nuggets": "Nuggets",
     "rpo.lavidacraft.items.nuggets.tooltip": "Custom textures for gold and iron nuggets that make them look like coins",
@@ -76,9 +78,7 @@
     "rpo.lavidacraft.items.potions.tooltip": "Custom textures for potions, lingering potions, and splash potions. This also affects brewing stands and their UI",
     "rpo.lavidacraft.items.splashPotions": "Splash Potions Style",
     "rpo.lavidacraft.items.splashPotions.default": "LavidaCraft",
-    "rpo.lavidacraft.items.splashPotions.legacy": "Legacy",
     "rpo.lavidacraft.items.splashPotions.molotov": "Molotov",
-    "rpo.lavidacraft.items.splashPotions.vanilla": "Vanilla",
     "rpo.lavidacraft.items.sugar": "Sugar",
 
     "rpo.lavidacraft.misc": "Misc.",
