@@ -1,3 +1,3 @@
 {
-    "condition": "lavidacraft.items.splashPotions.default | lavidacraft.items.splashPotions.legacy | lavidacraft.items.splashPotions.molotov & lavidacraft.items.potions"
+    "condition": "lavidacraft.items.splashPotions.default | lavidacraft.items.splashPotions.molotov & lavidacraft.items.potions"
 }
