@@ -1,0 +1,3 @@
+{
+    "condition": "lavidacraft.items.netherQuartz"
+}
